2013-10-27  Yury Aliaev  <mutab0r@rambler.ru>
	* app/mixers/kbfloat-mix.c: Removed unused NO_GASP conditional;
	* app/audio.[ch], app/audioconfig.c, app/driver-inout.h, app/driver.h,
	app/sample-editor.[ch], app/drivers/alsa1x.c, app/drivers/dsound-output.c,
	app/drivers/dummy-drivers.c, app/drivers/esd-output.c,
	app/drivers/file-output.c, app/drivers/irix-output.c, app/drivers/oss.c,
	app/drivers/sdl-output.c: Drivers API is cleaned up and extended for
	the upcoming JACK driver ("activate" and "deactivate" methods are added).

2013-10-16  Yury Aliaev  <mutab0r@rambler.ru>
	* configure.in: Fixed compilation with --no-asm option.

2013-10-13  Yury Aliaev  <mutab0r@rambler.ru>
	* po/*: Upgrade to gettext-0.18.2, clean-ups;
	* app/audio.c, app/audioconfig.c, app/gui.c, app/sample-editor.c,
	configure.in: clean-ups regarding to compilation with audiofile library
	and without sample output libraries at all.

2013-10-12  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-display.h: Compilation at some systems is fixed.

2013-09-27  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/esd-output.c: Error reporting is now displayed in correct
	encoding. Seems there is no notable delay when working thru Pulseaudio
	server.

2013-09-23  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c, app/instrument-editor.[ch], app/instrument-editor.h,
	app/menubar.c, app/module-info.c, app/sample-editor.c: Some bugs related
	to instruments' and samples' lists updating are fixed.

2013-09-20  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-editor.c: Compilation with audiofile is fixed;
	* app/audio.c, app/audio.h, app/audioconfig.c, app/drivers/file-output.c:
	File output driver is now configurable (samplerate and number of channels),
	sndfile and audiofile variants share a lot of code;
	* app/gui.c: The buggy displaying of .wav files is fixed;
	* app/file-operations.[ch], app/file-operations.h, app/gui.c,
	app/instrument-editor.c, app/sample-editor.c: Tooltips are added to file