@@ -1,3 +1,6 @@
+2013-11-22  Yury Aliaev  <mutab0r@rambler.ru>
+	* app/audioconfig.c: Postponed bugfix and code cleanup.
+
 2013-10-27  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/mixers/kbfloat-mix.c: Removed unused NO_GASP conditional;
 	* app/audio.[ch], app/audioconfig.c, app/driver-inout.h, app/driver.h,
